--- a/a-nest/package.json
+++ b/a-nest/package.json
@@ -31,16 +31,19 @@
         "db:generate-migration": "npm run typeorm migration:generate -- ./src/migrations -d ./dataSource.ts"
     },
     "dependencies": {
-        "@nestjs/common": "^9.0.0",
-        "@nestjs/config": "^2.2.0",
+        "@nestjs/common": "^9.3.9",
+        "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/swagger": "^6.2.1",
         "@nestjs/typeorm": "^9.0.1",
-        "mysql2": "^3.1.2",
+        "bcrypt": "^5.1.0",
+        "class-validator": "^0.14.0",
+        "dotenv": "^16.0.3",
+        "mysql2": "^2.2.5",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0",
-        "typeorm": "^0.3.12",
+        "typeorm": "^0.3.0",
         "typeorm-extension": "^2.4.2"
     },
     "devDependencies": {
